tests/machine/x/ts/map_in_operator.error
line 0: run: exit status 1
[0m[1m[31merror[0m: Uncaught (in promise) TypeError: m.includes is not a function
console.log((m.includes(1)));
[0m[31m               ^[0m
    at [0m[36mfile:///workspace/mochi/tests/machine/x/ts/map_in_operator.ts[0m:[0m[33m2[0m:[0m[33m16[0m

let m = {1: "a", 2: "b"};
