tests/machine/x/ts/map_in_operator.ts
let m = {1: "a", 2: "b"};
console.log((m.includes(1)));
console.log((m.includes(3)));
